added linear integration
